# vm-agent

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mcp_server.py  pyproject.toml
.claude/commands/: check-exposure.md  draft.md  justify.md  triage-overdue.md
config/: settings.py  sla.py
data/: sample_assets.json  sample_scan.csv
docs/: SECURITY.md
integrations/: __init__.py
integrations/assets/: __init__.py  registry.py
integrations/cve_sources/: __init__.py  base.py  cisa_kev.py  epss.py  osv.py
integrations/exceptions/: __init__.py  registry.py
integrations/scanners/: __init__.py  base.py  mock_scanner.py
integrations/ticketing/: __init__.py  base.py  mock_tickets.py
models/: __init__.py  asset.py  remediation.py  vulnerability.py
security/: __init__.py  audit.py  prompt_defense.py  sanitization.py  validation.py
tests/: test_asset_registry.py  test_exception_registry.py  test_mock_scanner.py  test_models.py  test_osv_client.py  test_security.py  test_sla.py
tools/: assets.py  cve.py  remediation.py  scanner.py
